--- a/杂项/学习经验分享.md
+++ b/杂项/学习经验分享.md
@@ -1,3 +1,7 @@
+# 学习经验分享
+
+*这是期中考试后黄老师要求全班成绩前五位同学给大家分享学习经验时所用的稿子。这里只写了我的稿子。*
+
 # 前言
 
 上半学期紧张的学习已经结束了，这次的期中考试我考到了全班第二，实话说，这个成绩真的让我很意外，在小学我也从来没有考过这么高的名次。就拿学习方法来说，我着实听到过很多很多高效学习的方法，比如自主预习、复习，以及快速完成作业的方法。总结下来，这些方法，有些我从来没有实践过，也就没有什么发言权；有些只是教你如何利用时间。就我个人片面的观点来说，这些方法不努力都是不行的。而我的努力也远远没有达到那些公认学霸的努力的二分之一。真正的学霸，是到高考才见分晓的，不是简单的一次期中考试。
@@ -36,3 +40,5 @@
 4. 要有一定的好句、靓词（好词）。
 
 所谓三段式，即总、分、总。三段最好都能点题。这是中考的要求。所谓好句，就是定从、宾从、状从；靓词，就是一些表达强烈主观观点，并且比较少见的词语。比如重要的 important ，语气强烈时可以换成 essential 必要的、不可或缺的。在七年级，这些都是加分项，可以挽回一部分前两条做得不好的。但在中招，这些要求可以让你达到19～20分。
+
+> 另见：[期中考试后对自己的理性反思 - 2021.11.10](Daily/2021.11/10.md)
