add Diary Nov. 13th and Phigros.md

--- a/杂项/学习经验分享.md
+++ b/杂项/学习经验分享.md
@@ -1,6 +1,4 @@
-# 学习经验分享
-
-*这是期中考试后黄老师要求全班成绩前五位同学给大家分享学习经验时所用的稿子。这里只写了我的稿子。*
+# 学习经验分享<sup>①</sup>
 
 # 前言
 
@@ -20,11 +18,11 @@
 
 ## 试卷检查
 
-中考要考的文化课一共7门：语数英政史地生。除了语文、历史，剩下的5门大家似乎在考试结束前20分钟就有半数以上的同学答完了试卷。确实，检查是一件非常非常重要的事情，它能有效提高你的考试成绩。但同时，检查也是一件枯燥无味的事情。包括我在内，很多同学完成试卷后即使发呆、看着钟数秒，也坚决不检查。对此，我的解决方法是认真、细致地做题，放慢速度，尽量在第一遍答卷时就把题做全对。毕竟不确定的题我们都是相信第一直觉。这样的方法可以让你在做题时不那么紧张，也不至于做完后空白时间太长，浪费时间，还能确保注意力一直在卷子上，提高正确率。
+七年级要考的文化课一共7门：语数英政史地生。除了语文、历史，剩下的5门大家似乎在考试结束前20分钟就有半数以上的同学答完了试卷。确实，检查是一件非常非常重要的事情，它能有效提高你的考试成绩。但同时，检查也是一件枯燥无味的事情。包括我在内，很多同学完成试卷后即使发呆、看着钟数秒，也坚决不检查。对此，我的解决方法是认真、细致地做题，放慢速度，尽量在第一遍答卷时就把题做全对。毕竟不确定的题我们都是相信第一直觉。这样的方法可以让你在做题时不那么紧张，也不至于做完后空白时间太长，浪费时间，还能确保注意力一直在卷子上，提高正确率。
 
 # 听讲
 
-正如各科老师所说，中招考试，课堂是主阵地。如果在家自习没人逼你，在学校那就老师逼你。历史课上我们也学到了，为什么奴隶阶级后来变成了地主阶级？当然是因为被人逼出来的效率不高。既然在学校你不得不学习，那不如就在学校把知识学好。大家可以像我一样，上课时把老师讲的内容以单个词语的形式记在脑海里。如果是地理课上比较抽象的问题，比如南北回归线、太阳直射点，只需要记住地球的地轴是以一个固定的倾斜角度围绕太阳公转的，再根据课本上太阳直射点的位置变化图和南北回归线的定义进行思考，很容易就可以记住一大块知识点。听讲好了，作业完成得就更快了，效率自然也就上来了。
+正如各科老师所说，中招考试，课堂是主阵地。如果在家自习没人逼你，在学校那就老师逼你。既然在学校你不得不学习，那不如就在学校把知识学好。大家可以像我一样，上课时把老师讲的内容以单个词语的形式记在脑海里。如果是地理课上比较抽象的问题，比如南北回归线、太阳直射点，只需要记住地球的地轴是以一个固定的倾斜角度围绕太阳公转的，再根据课本上太阳直射点的位置变化图和南北回归线的定义进行思考，很容易就可以记住一大块知识点。听讲好了，作业完成得就更快了，效率自然也就上来了。
 
 # 特别强调
 
@@ -39,6 +37,10 @@
 3. 三段式；
 4. 要有一定的好句、靓词（好词）。
 
-所谓三段式，即总、分、总。三段最好都能点题。这是中考的要求。所谓好句，就是定从、宾从、状从；靓词，就是一些表达强烈主观观点，并且比较少见的词语。比如重要的 important ，语气强烈时可以换成 essential 必要的、不可或缺的。在七年级，这些都是加分项，可以挽回一部分前两条做得不好的。但在中招，这些要求可以让你达到19～20分。
+所谓三段式，即总、分、总。三段最好都能点题。这是中考的要求。所谓好句，就是定从、宾从、状从；靓词，就是一些表达强烈主观观点，并且比较少见的词语。比如重要的 important ，语气强烈时可以换成 essential 必要的、不可或缺的。在七年级，这些都是加分项，可以挽回一部分前两条做得不好的。但在中招，这些要求可以让你的作文达到19～20分。
 
-> 另见：[期中考试后对自己的理性反思 - 2021.11.10](Daily/2021.11/10.md)
+---
+
+①〔学习经验分享〕这是期中考试后老师要求全班成绩前五位同学给大家分享学习经验时所用的稿子。这里只写了我的稿子。
+
+> 另见：[期中考试后对自己的理性反思 - 2021.11.10](../Daily/2021.11.md)
