add a form to make contect more easily

--- a/Daily/2021.11.md
+++ b/Daily/2021.11.md
@@ -16,11 +16,13 @@
 
 ## 11月13日
 
-和往常一样的周六，我和另外三个伙伴（W. Haohan，Y. Jingchao，L. Ruoxuan）<sup>①</sup>去羽毛球馆打球。晚上7:00的羽毛球课，一直上到8:30结束。上课归上课，打球和上课可完全不一样。我们又在球馆从8:30打到了10:00。不得不说，还是有蛮大提升的。我们四个伙伴中，打得最好的是W.，别的同学在学校二打一都打不过他；其次是我和Y.，虽然接不住W.的杀球，但是普通练球打上5个回合不成问题；最后是L.，可能因为不擅长运动，课上老师教的动作都用不起来，她也是我们四个中唯一的女生。
+和往常一样的周六，我和另外三个伙伴（Wang.，Yang.，Li.）<sup>①</sup>去羽毛球馆打球。晚上7:00的羽毛球课，一直上到8:30结束。上课归上课，打球和上课可完全不一样。我们又在球馆从8:30打到了10:00。不得不说，还是有蛮大提升的。我们四个伙伴中，打得最好的是Wang.，别的同学在学校二打一都打不过他；其次是我和Yang.，虽然接不住Wang.的杀球，但是普通练球打上5个回合不成问题；最后是Li.，可能因为不擅长运动，课上老师教的动作都用不起来，她也是我们四个中唯一的女生。
 
-当然，我们不是单独一个一个来球馆的，还有“宝妈”。我们四个原本是同班同学，小学的一次分班时被分开，现在升入初中，我、W.和L.又在同一个班。种种关系下来，我们四个是离得最近、关系最好的四个，一起打球也就不奇怪了。
+我们四个原本是同班同学，小学的一次分班时被分开，现在升入初中，我、Wang.和Li.又在同一个班。种种关系下来，我们四个是离得最近、关系最好的四个，一起打球也就不奇怪了。
 
-也许你想知道，为什么W.是我们四个中打球打得最好的呢？两个原因。一是他之前断断续续学过一年的羽毛球，二是他先天手腕力量就大。也许这就是先天＋努力吧。
+当然，我们不是单独一个一个来球馆的，还有“宝妈”。因为原本就同在一个班，关系也都很近。明天不知道谁的宝妈还想请我们三个吃饭呢！
+
+也许你想知道，为什么Wang.是我们四个中打球打得最好的呢？两个原因。一是他之前断断续续学过一年的羽毛球，二是他先天手腕力量就大。也许这就是先天＋努力吧。
 
 至此，大家应该了解我们整个“球队”的大致情况了。
 
@@ -28,8 +30,22 @@
 
 ---
 
-①〔三个伙伴（W. Haohan，Y. Jingchao，L. Ruoxuan）〕为保护隐私，这里姓名进行了英文改写。如您认为侵权，请与我联系。
+①〔三个伙伴（Wang.，Yang.，Li.）〕为保护隐私，这里姓名进行了英文改写。如您认为侵权，请与我联系。
 
 ---
+
+## 11月15日
+
+今天是“笑草说”启动的第一天。什么是“笑草说”？且听我娓娓道来……
+
+开学后，老师让同学们起一个班名。但是同学们的班名都太平常、太通用了，起的名字要么别的班已经用了，要么就太俗了。老师抉择了整整一个月，最终决定叫做“笑草班”。先别笑，这可是有寓意的。
+
+>   “笑”，寓意着乐观，无论遇到什么困难，都不放弃，都能够笑着面对；“草”，即“野火烧不尽，春风吹又生。”意味着永不放弃。
+
+一开始，大家都不同意，听了老师的解释，我们最终也同意了。
+
+“笑草说”，“说”就是演说、演讲。具体来说，就是每天下午午读前都由一位同学上台说一些自己感兴趣的东西，游戏也可以讲，可以做成PPT，也可以直接介绍，但要预先准备好。
+
+现在，大家应该对我们的“笑草说”有了一定的了解。想知道更详细的内容？来 [这里](../杂项/笑草说.md) ，虽然没有提供PPT，对照着主题锻炼一下自己的口才和快速思维能力也不错！
 
 >  [回到首页](../README.md) 
