--- a/杂项/学习经验分享.md
+++ b/杂项/学习经验分享.md
@@ -44,3 +44,5 @@
 ①〔学习经验分享〕这是期中考试后老师要求全班成绩前五位同学给大家分享学习经验时所用的稿子。这里只写了我的稿子。
 
 > 另见：[期中考试后对自己的理性反思 - 2021.11.10](../Daily/2021.11.md)
+>
+>  [回到首页](../README.md) 
