--- a/Daily/2021.11.md
+++ b/Daily/2021.11.md
@@ -46,6 +46,6 @@
 
 “笑草说”，“说”就是演说、演讲。具体来说，就是每天下午午读前都由一位同学上台说一些自己感兴趣的东西，游戏也可以讲，可以做成PPT，也可以直接介绍，但要预先准备好。
 
-现在，大家应该对我们的“笑草说”有了一定的了解。想知道更详细的内容？来 [这里](../杂项/笑草说.md) ，虽然没有提供PPT，对照着主题锻炼一下自己的口才和快速思维能力也不错！
+现在，大家应该对我们的“笑草说”有了一定的了解。想知道更详细的内容？来 [这里](../杂项/笑草说.md) ，没有提供PPT，对照着主题锻炼一下自己的口才和快速思维能力也不错！
 
 >  [回到首页](../README.md) 
