--- a/杂项/笑草说.md
+++ b/杂项/笑草说.md
@@ -1,8 +1,32 @@
 # “笑草说”主题汇总
 
+对照着主题锻炼一下自己的口才和快速思维能力吧！
+
 -   2021年
-    -   11.15 - 羽毛球的历史和规则（Weng Ruiyang）
-    -   11.16 - 我国的航空航天发展历程（Yang Senmiao）
-    -   11.17 - 历史上唯一一位女皇帝——武则天（Qin Ziqing）
-    -   11.18 - 什么是二次元？二次元的发展和现状（Yang Kaicheng）
-    -   11.19 - “剧本杀”游戏（He Ruogu）
+    -   11月
+        -   11.15 - 乒乓球的历史和规则（Weng Ruiyang）
+        -   11.16 - 我国的航空航天发展历程（Yang Senmiao）
+        -   11.17 - **历史上唯一一位女皇帝——武则天（Qin Ziqing）**
+        -   11.18 - 什么是二次元？二次元的发展和现状（Yang Kaicheng）
+        -   11.19 - “剧本杀”游戏（He Ruogu）
+        -   11.22 - 滑板——长板（Wen Manxi） 
+        -   11.23 - 我的歌单（Zhang Keyuan） 
+        -   11.24 - 《盗墓笔记》（Meng Jiayi） 
+        -   11.25 - **资本主义国家的运作（Jiang Yunyi）**
+        -   11.26 - 我爱篮球（Liu Jingren）
+        -   11.29 - 《生命》 by 余华（Hao Yueqi）
+        -   11.30 - 计算机语言（Hu Zhiyu）
+        -   12.1 - 特种兵部队（Zhou Yixuan）
+        -   **12.2 - 长征（Ni Zhenyun）**
+        -   12.3 - 初中物理（Cai Xinyuan）
+        -   12.6 - 环首刀/唐横刀（Li Yiran）
+        -   12.7 - 二七大罢工（Hu Zhiyu） 
+        -   12.8 - 基础乐理知识（Qiu Jiayang）
+        -   12.9 - 中国第一颗原子弹（Weng Ruiyang）
+        -   12.10 - AI智能时代（Wang Zihang）
+
+>   **加粗的字**是我认为当时演讲优秀的人。如果你来讲，你觉得你会讲好吗？
+
+---
+
+>   [回到首页](../README.md) 
