--- a/杂项/笑草说.md
+++ b/杂项/笑草说.md
@@ -24,6 +24,7 @@
         -   12.8 - 基础乐理知识（Qiu Jiayang）
         -   12.9 - 中国第一颗原子弹（Weng Ruiyang）
         -   12.10 - AI智能时代（Wang Zihang）
+        -   12.13 - 游戏的制作（Liu Zuxu）
 
 >   **加粗的字**是我认为当时演讲优秀的人。如果你来讲，你觉得你会讲好吗？
 
