updated Version 0.1.0 | Pre-Release 2

--- a/Daily/2021.11.md
+++ b/Daily/2021.11.md
@@ -48,4 +48,6 @@
 
 现在，大家应该对我们的“笑草说”有了一定的了解。想知道更详细的内容？来 [这里](../杂项/笑草说.md) ，没有提供PPT，对照着主题锻炼一下自己的口才和快速思维能力也不错！
 
->  [回到首页](../README.md) 
+>  [回到首页](../README.md)
+>
+>  <a href="#" onClick="javascript :history.back(-1);">返回上一页</a>
