--- a/杂项/《西游记》梗概.md
+++ b/杂项/《西游记》梗概.md
@@ -153,3 +153,7 @@
 ## 第三十一回——猪八戒义识猴王 孙行者智降妖怪
 
 孙悟空再三审问，八戒终于将实情告诉了他。又使个激将法，让孙悟空大怒，随八戒去降妖。路上还净身，怕师父说他身上有妖气。到了妖洞，悟空让八戒和沙僧抓那怪两个孩子去引妖来战。一番打斗下来，把妖怪打得无影无踪。去天上一查，得知那妖是奎星。玉帝便和悟空共下凡间，共同降妖。三人带公主回到宝象国，把唐僧变回本相。国王大开东阁，师徒继续西行。
+
+>[回到首页](../README.md)
+>
+><a href="#" onClick="javascript :history.back(-1);">返回上一页</a>
