--- a/杂项/笑草说.md
+++ b/杂项/笑草说.md
@@ -16,7 +16,8 @@
         -   11.26 - 我爱篮球（Liu Jingren）
         -   11.29 - 《生命》 by 余华（Hao Yueqi）
         -   11.30 - 计算机语言（Hu Zhiyu）
-        -   12.1 - 特种兵部队（Zhou Yixuan）
+    -   12月
+        -   **12.1 - 特种兵部队（Zhou Yixuan）**
         -   **12.2 - 长征（Ni Zhenyun）**
         -   12.3 - 初中物理（Cai Xinyuan）
         -   12.6 - 环首刀/唐横刀（Li Yiran）
@@ -24,10 +25,14 @@
         -   12.8 - 基础乐理知识（Qiu Jiayang）
         -   12.9 - 中国第一颗原子弹（Weng Ruiyang）
         -   12.10 - AI智能时代（Wang Zihang）
-        -   12.13 - 游戏的制作（Liu Zuxu）
+        -   <a name="12.13">12.13 - “简单”的游戏制作（Liu Zuxu）</a>
+        -   12.14 - 民国才女——林徽因（Zhang Songyu）
+        -   12.15 - “简单”的游戏制作（Liu Zuxu）<sup>续<a href="#12.13">12.13</a></sup>
 
 >   **加粗的字**是我认为当时演讲优秀的人。如果你来讲，你觉得你会讲好吗？
 
 ---
 
 >   [回到首页](../README.md) 
+>
+>   <a href="#" onClick="javascript :history.back(-1);">返回上一页</a>
