updated Version 0.1.0 | Pre-Release 3

--- a/Daily/2021.11.md
+++ b/Daily/2021.11.md
@@ -50,4 +50,6 @@
 
 >  [回到首页](../README.md)
 >
->  <a href="#" onClick="javascript :history.back(-1);">返回上一页</a>
+>  [阅读其他日记体博客](Daily.md)
+>
+>  <a href="" onClick="javascript :history.back(-1);">返回上一页</a>
