--- a/杂项/学习经验分享.md
+++ b/杂项/学习经验分享.md
@@ -45,4 +45,8 @@
 
 > 另见：[期中考试后对自己的理性反思 - 2021.11.10](../Daily/2021.11.md)
 >
->  <a href="#" onClick="javascript :history.back(-1);">返回上一页</a>
+> [返回首页](../README.md)
+>
+> [阅读其他杂类文章](杂项.md)
+>
+> <a href="" onClick="javascript :history.back(-1);">返回上一页</a>
