--- a/杂项/笑草说.md
+++ b/杂项/笑草说.md
@@ -35,4 +35,6 @@
 
 >   [回到首页](../README.md) 
 >
->   <a href="#" onClick="javascript :history.back(-1);">返回上一页</a>
+>   [阅读其他杂类文章](杂项.md)
+>
+>   <a href="" onClick="javascript :history.back(-1);">返回上一页</a>
