--- a/Daily/2021.12.md
+++ b/Daily/2021.12.md
@@ -2,7 +2,7 @@
 
 ## 12月16日
 
-今天是周四，也是[Version 0.1.0 | Pre-Release 3](../杂项/History.md)发布的时候。但实际上，这几天我非常忙。
+今天是周四，也是[Version 0.1.0｜Pre-Release 3](../杂项/History.md)发布的时候。但实际上，这几天我非常忙。
 
 前些天，我一直在忙于学校的工作。为什么前几天都不发文，只是默默更新？因为需要做的事实在是太多了。就拿今天举例，班级正在搞“最美班级”竞选活动，需要每个人做一张手抄报，这张手抄报上要体现你的基本信息、兴趣、特长等等；还要准备一个《西游记》的故事会，明天老师会抽签选同学上台讲《西游记》。另外，下周二，我和另外选中的五个同学要讲一场班会，需要我们自主策划；下周三，我们还要上台演情景剧，剧本也是我们自主策划……
 
@@ -10,10 +10,28 @@
 
 不说了，干活了……
 
+## 12月21日
+
+上周文章说，我们需要自主策划一场班会。现在，我满意地宣布：
+
+> **班会举行得十分成功！**
+
+明天还要准备一个心理情景剧（关于校园欺凌），我们的要求是“语言欺凌”。相对来说还是比较简单的。
+
+最近临近复习（1月19号考试），笑草说暂停，所以不要再问主题是不是不更啦！
+
+> 附上班会PPT下载链接，里面有4款小游戏（无聊的时候可以玩玩）：
+>
+> [https://huanqiu.lanzouo.com/b01uvqdvi](https://huanqiu.lanzouo.com/b01uvqdvi)
+>
+> 密码:00
+
+Adiós！
+
 ---
 
 > [回到首页](../README.md)
 >
 > [阅读其他日记体博客](Daily.md)
 >
-> <a href="" onClick="javascript :history.back(-1);">返回上一页</a>
+> <a onClick="javascript :history.back(-1);">返回上一页（直接点我）</a>
