--- a/杂项/笑草说.md
+++ b/杂项/笑草说.md
@@ -28,6 +28,7 @@
         -   <a name="12.13">12.13 - “简单”的游戏制作（Liu Zuxu）</a>
         -   12.14 - 民国才女——林徽因（Zhang Songyu）
         -   12.15 - “简单”的游戏制作（Liu Zuxu）<sup>续<a href="#12.13">12.13</a></sup>
+        -   12.16 - 我最喜欢的篮球明星——Stephen Curry（Han Yufan）
 
 >   **加粗的字**是我认为当时演讲优秀的人。如果你来讲，你觉得你会讲好吗？
 
@@ -37,4 +38,4 @@
 >
 >   [阅读其他杂类文章](杂项.md)
 >
->   <a href="" onClick="javascript :history.back(-1);">返回上一页</a>
+>   <a onClick="javascript :history.back(-1);">返回上一页（直接点我）</a>
