--- a/杂项/《西游记》梗概.md
+++ b/杂项/《西游记》梗概.md
@@ -158,4 +158,4 @@
 >
 >[阅读其他杂类文章](杂项.md)
 >
-><a onClick="javascript :history.back(-1);">返回上一页（直接点我）</a>
+><a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a>
