--- a/杂项/笑草说.md
+++ b/杂项/笑草说.md
@@ -13,7 +13,7 @@
         -   11.23 - 我的歌单（Zhang Keyuan） 
         -   11.24 - 《盗墓笔记》（Meng Jiayi） 
         -   11.25 - **资本主义国家的运作（Jiang Yunyi）**
-        -   11.26 - 我爱篮球（Liu Jingren）
+        -   11.26 - 我爱篮球（Liu Jinrun）
         -   11.29 - 《生命》 by 余华（Hao Yueqi）
         -   11.30 - 计算机语言（Hu Zhiyu）
     -   12月
@@ -38,4 +38,4 @@
 >
 >   [阅读其他杂类文章](杂项.md)
 >
->   <a onClick="javascript :history.back(-1);">返回上一页（直接点我）</a>
+>   <a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a>
