--- a/Daily/2021.11.md
+++ b/Daily/2021.11.md
@@ -52,4 +52,4 @@
 >
 >  [阅读其他日记体博客](Daily.md)
 >
->  <a onClick="javascript :history.back(-1);">返回上一页（直接点我）</a>
+>  <a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a>
