add a diary and a passage

--- a/Daily/2021.11.md
+++ b/Daily/2021.11.md
@@ -8,15 +8,9 @@
 
 （Advice<sup>②</sup>：希望将“牛”评级用于非常好的作业，比如上周班会表扬的作业。优秀作业用“优”就好）
 
----
-
-①〔这两篇日记〕指11月9日和10日两篇日记。此为其中一篇。
-
-②〔Advice〕建议，这里是写给老师的建议。该建议最终被老师略微调整后采用。
-
 ## 11月13日
 
-和往常一样的周六，我和另外三个伙伴（Wang.，Yang.，Li.）<sup>①</sup>去羽毛球馆打球。晚上7:00的羽毛球课，一直上到8:30结束。上课归上课，打球和上课可完全不一样。我们又在球馆从8:30打到了10:00。不得不说，还是有蛮大提升的。我们四个伙伴中，打得最好的是Wang.，别的同学在学校二打一都打不过他；其次是我和Yang.，虽然接不住Wang.的杀球，但是普通练球打上5个回合不成问题；最后是Li.，可能因为不擅长运动，课上老师教的动作都用不起来，她也是我们四个中唯一的女生。
+和往常一样的周六，我和另外三个伙伴（Wang.，Yang.，Li.）<sup>③</sup>去羽毛球馆打球。晚上7:00的羽毛球课，一直上到8:30结束。上课归上课，打球和上课可完全不一样。我们又在球馆从8:30打到了10:00。不得不说，还是有蛮大提升的。我们四个伙伴中，打得最好的是Wang.，别的同学在学校二打一都打不过他；其次是我和Yang.，虽然接不住Wang.的杀球，但是普通练球打上5个回合不成问题；最后是Li.，可能因为不擅长运动，课上老师教的动作都用不起来，她也是我们四个中唯一的女生。
 
 我们四个原本是同班同学，小学的一次分班时被分开，现在升入初中，我、Wang.和Li.又在同一个班。种种关系下来，我们四个是离得最近、关系最好的四个，一起打球也就不奇怪了。
 
@@ -27,12 +21,6 @@
 至此，大家应该了解我们整个“球队”的大致情况了。
 
 > 下周再打球时，我也许会带来一些照片，希望你能继续关注。
-
----
-
-①〔三个伙伴（Wang.，Yang.，Li.）〕为保护隐私，这里姓名进行了英文改写。如您认为侵权，请与我联系。
-
----
 
 ## 11月15日
 
@@ -47,6 +35,16 @@
 “笑草说”，“说”就是演说、演讲。具体来说，就是每天下午午读前都由一位同学上台说一些自己感兴趣的东西，游戏也可以讲，可以做成PPT，也可以直接介绍，但要预先准备好。
 
 现在，大家应该对我们的“笑草说”有了一定的了解。想知道更详细的内容？来 [这里](../杂项/笑草说.md) ，没有提供PPT，对照着主题锻炼一下自己的口才和快速思维能力也不错！
+
+---
+
+①〔这两篇日记〕指11月9日和10日两篇日记。此为其中一篇。
+
+②〔Advice〕建议，这里是写给老师的建议。该建议最终被老师略微调整后采用。
+
+③〔三个伙伴（Wang.，Yang.，Li.）〕为保护隐私，这里姓名进行了英文改写。如您认为侵权，请与我联系。
+
+---
 
 >  [回到首页](../README.md)
 >
