--- a/Daily/2021.12.md
+++ b/Daily/2021.12.md
@@ -28,6 +28,14 @@
 
 Adiós！
 
+## 12月31日
+
+今天是2021年的最后一天，学校让我们举行一场元旦联欢会。为了联欢会顺利举行，我和另一位同学制作了一个PPT，还准备将电脑带到学校以便投屏播放PPT。可惜的是，因为学校的教学机问题，电脑没有办法通过HDMI投屏。详情见[这篇文章](../杂项/联欢会避坑指南.md)。
+
+此外，我们还找了3位同学全程录制联欢会，但是由于我们一直在努力调试教学机，没有对他们视频的录制进行特殊的要求，因此录制的视频参差不齐、长短不一、格式不规范。
+
+如果你们也开联欢会了，那么强烈建议看一看[这篇文章](../杂项/联欢会避坑指南.md)的视频录制部分 ~~至少不至于别人要求你录制视频时你连他说的是什么都不知道~~。
+
 ---
 
 > [回到首页](../README.md)
