--- a/Daily/2021.12.md
+++ b/Daily/2021.12.md
@@ -18,7 +18,7 @@
 
 明天还要准备一个心理情景剧（关于校园欺凌），我们的要求是“语言欺凌”。相对来说还是比较简单的。
 
-最近临近复习（1月19号考试），笑草说暂停，所以不要再问主题是不是不更啦！
+最近临近考试（1月19号），需要复习，笑草说暂停，所以不要再问主题是不是不更啦！
 
 > 附上班会PPT下载链接，里面有4款小游戏（无聊的时候可以玩玩）：
 >
@@ -34,7 +34,11 @@ Adiós！
 
 此外，我们还找了3位同学全程录制联欢会，但是由于我们一直在努力调试教学机，没有对他们视频的录制进行特殊的要求，因此录制的视频参差不齐、长短不一、格式不规范。
 
-如果你们也开联欢会了，那么强烈建议看一看[这篇文章](../杂项/联欢会避坑指南.md)的视频录制部分 ~~至少不至于别人要求你录制视频时你连他说的是什么都不知道~~。
+>   待到期末考完时，再来剪视频
+
+等我们视频剪完了，会发到这里的！~~（人类低质量联欢会~~
+
+如果你们也开联欢会了，那么强烈建议看一看[这篇文章](../杂项/联欢会避坑指南.md)的视频录制部分~~（至少不至于别人要求你录制视频时你连他说的是什么都不知道~~
 
 ---
 
