--- a/杂项/笑草说.md
+++ b/杂项/笑草说.md
@@ -25,7 +25,7 @@
         -   12.8 - 基础乐理知识（Qiu Jiayang）
         -   12.9 - 中国第一颗原子弹（Weng Ruiyang）
         -   12.10 - AI智能时代（Wang Zihang）
-        -   <a name="12.13">12.13 - “简单”的游戏制作（Liu Zuxu）</a>
+        -   12.13 - “简单”的游戏制作（Liu Zuxu）<a name="12.13"> </a>
         -   12.14 - 民国才女——林徽因（Zhang Songyu）
         -   12.15 - “简单”的游戏制作（Liu Zuxu）<sup>续<a href="#12.13">12.13</a></sup>
         -   12.16 - 我最喜欢的篮球明星——Stephen Curry（Han Yufan）
