--- a/杂项/杂项.md
+++ b/杂项/杂项.md
@@ -1,16 +1,16 @@
 # 随便写写
 
-这里是我的情感碎片收集处。在这里，你可以看到各种各样的文章：学习方面的、电脑编程方面的、运动方面的……这些内容会出现在这里。它们也许会和日记体博客有一定的联系，但是只会在提到时放上文章的链接。毕竟兴趣是最重要的，所以这里的文章应该会比日记体博客多……大概吧。
+这里是我的情感碎片收集处。在这里，你可以看到各种各样的文章：学习方面的、电脑编程方面的、运动方面的……这些内容会出现在这里。它们也许会和日记体博客有一定的联系，但是只会在提到时放上文章的链接。毕竟兴趣是最重要的，所以这里的文章应该会比日记体博客多……
 
 Q：这里的文章会做分类吗？
 
-A：大概吧。目前这里的文章还不算多，所以不会出现查找上的困难。等日后文章渐渐多起来再做也不迟（但这真的可能吗）。
+A：大概吧。目前这里的文章还不算多，所以不会出现查找上的困难。等日后文章渐渐多起来再做也不迟（但这真的可能吗？~~对我这只懒狗来说~~）。
 
 > [回到首页](../README.md) 
 >
 > [阅读我的日记体博客](../Daily/Daily.md) 
 >
-> <a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a>
+> <a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a> 
 
 # 内容总览
 
