fix styles and links

--- a/Daily/2022.1.md
+++ b/Daily/2022.1.md
@@ -4,9 +4,21 @@
 
 元旦假期后的第一天，我所在的郑州因为疫情全市停课。临近期末，网课给了部分同学冲刺的时间，也会导致部分同学成绩下滑。现在疫情肆虐，不止郑州，很多城市都开启了“停课不停学”线上教学，不过是临时性的。希望大家看到这篇文章之后努力复习，绝不落下！
 
+## 1月20日
+
+期末考试完毕，可以暂时休息一下了。但我今天打开Sakura Frp的时候，发现他们正好在维护服务器，维护完成后，普通用户的权益调整如下：
+
+>隧道数量：5→2，已经创建的超出隧道不会被删除。
+>
+>签到所得流量不再能够累计，每月自动给所有用户发放5GB免费流量，次月清零并重新发放5GB。
+
+这些是我比较关心的更新内容。虽然对普通用户的权益进行了较大的消减，但基本够用。举个例子，我是一位Minecraft玩家，会用Sakura Frp进行联机。每次联机（2人，版本1.18.1）如果不超过一小时，那么流量大约在100MiB以内，10小时的联机就是1000MiB以内，也就是1GiB。每天签到能获得1～4GiB的流量，最少能获得1GiB，足够联机10个小时。除非你是服主，不然仅仅是Minecraft联机的话完全够用了。
+
+不知道你们怎么看这次Sakura Frp的更新维护，可以去首页给我发个消息讨论一下～
+
 ---
 
->   [回到首页](../README.md)
+>   [回到首页](../index.md)
 >
 >   [阅读其他日记体博客](Daily.md)
 >
