--- a/杂项/学习经验分享.md
+++ b/杂项/学习经验分享.md
@@ -45,7 +45,7 @@
 
 > 另见：[期中考试后对自己的理性反思 - 2021.11.10](../Daily/2021.11.md)
 >
-> [返回首页](../README.md)
+> [返回首页](../index.md)
 >
 > [阅读其他杂类文章](杂项.md)
 >
