--- a/杂项/杂项.md
+++ b/杂项/杂项.md
@@ -6,7 +6,7 @@ Q：这里的文章会做分类吗？
 
 A：大概吧。目前这里的文章还不算多，所以不会出现查找上的困难。等日后文章渐渐多起来再做也不迟（但这真的可能吗？~~对我这只懒狗来说~~）。
 
-> [回到首页](../README.md) 
+> [回到首页](../index.md) 
 >
 > [阅读我的日记体博客](../Daily/Daily.md) 
 >
