--- a/杂项/不完美的她.md
+++ b/杂项/不完美的她.md
@@ -95,3 +95,11 @@
 ![不完美的她｜彩蛋.png](https://s2.loli.net/2022/01/27/lBGmDiAHyQ1VSbs.png)
 
 ▲默默无闻的陈思诺ww
+
+---
+
+>   [返回首页](../index.md)
+>
+>   [阅读其他杂类文章](杂项.md)
+>
+>   <a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a>
