--- a/杂项/2021~2022寒假作文-1.md
+++ b/杂项/2021~2022寒假作文-1.md
@@ -35,3 +35,11 @@
 而这种心态从我小时候就出现了。刚上小学一年级时，我看到电视里一个人坐在一个庞大的黑色盒子前，不断用手指按下盒子上黑白相间的长方形格子。后来我知道，那个庞大的盒子叫做钢琴，那类人有一个共同的名字，叫做钢琴家。钢琴在我刚上小学一年级时就深深吸引了我，驱使我练习钢琴六年有余，最终拿到了英皇八级良好的成绩单。虽然累，但我从不对小时候作出的决定感到后悔，反而有些庆幸。
 
 “全能”并不意味精通一切，而是要敢于尝试各种活动，锻炼自己。被别人逼迫是不会成功的。有了梦想并向梦想不断努力，成功就在远方。现在还不晚。
+
+---
+
+> [回到首页](../index.md) 
+>
+> [阅读其他杂类文章](杂项.md)
+>
+> <a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a>
