--- a/杂项/2021~2022寒假作文.md
+++ b/杂项/2021~2022寒假作文.md
@@ -35,3 +35,9 @@
 ---
 
 以上内容为修改过后的第二版，第一版内容可以在[这里](2021～2022寒假作文-1.md)找到
+
+> [回到首页](../index.md) 
+>
+> [阅读其他杂类文章](杂项.md)
+>
+> <a onClick="javascript :history.back(-1);" style="cursor:pointer">返回上一页</a>
